# mason

./: .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  LICENSE  PRODUCT.md  README.md  justfile  knip.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
.changeset/: README.md  bento-wall.md  caption-track-path.md  config.json  deploy-reload-defer.md  dirty-cache-persist.md  faster-wall-hydration.md  glaze-alt-dialog-focus.md  glaze-carousel-paging-a11y.md  glaze-focus-reveal.md  glaze-image-wall.md  glaze-only-mode-reset.md  glaze-overlay-contrast.md  glaze-touch-reveal.md  handle-not-found-by-code.md  heading-policy.md  live-bricks.md  logged-out-visibility.md  masonry-one-keyed-list.md  mobile-wall-polish.md  olive-donkeys-refresh.md  quiet-walls-fresh.md  reflow-while-warming.md  scrub-hostile-brick-links.md  sw-ready-race-timeout.md  sw-survives-deploy.md  switchwall-aria-dash.md  switchwall-modal-focus.md  tighten-mobile-menu.md  tuck-pointing-pds-endpoints.md  video-cancel-inflight-import.md  wall-extends-itself.md  wall-live-region.md  wall-session-cache-back-forward.md  wall-switch-generation-guard.md  warm-reflow-keyboard-freeze.md  wasm-drop-reqwest.md  wide-donkeys-shave.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  preview.yml  release.yml
.impeccable/critique/: 2026-07-12T00-34-06Z__web-src.md
.impeccable/live/: config.json
config/: preview.jsonc  production.jsonc  staging.jsonc
scripts/: release.mjs  sync-version.mjs
server/: Cargo.toml
server/crates/mortar-core/: Cargo.toml
server/crates/mortar-core/src/: cache.rs  config.rs  error.rs  feed.rs  fixtures.rs  http.rs  lib.rs  mode.rs  model.rs  persist.rs  platform.rs
server/crates/mortar-core/src/algo/: cohort.rs  cursor.rs  fill.rs  mix.rs  mod.rs  score.rs  snapshot.rs
server/crates/mortar-core/src/sources/: bluesky.rs  fetch.rs  mod.rs  pds.rs  standardsite.rs  streamplace.rs  util.rs
server/crates/mortar-core/tests/: contract.rs
server/crates/mortar-core/tests/fixtures/: contract.json
server/crates/mortar-server/: Cargo.toml
server/crates/mortar-server/src/: main.rs
server/crates/mortar-server/src/routes/: feed.rs  mod.rs
server/crates/mortar-wasm/: Cargo.toml
server/crates/mortar-wasm/src/: lib.rs
server/src/: cache.rs  config.rs  error.rs  fixtures.rs  http.rs  main.rs  state.rs
server/src/algo/: cursor.rs  mix.rs  score.rs  snapshot.rs
server/src/routes/: feed.rs  health.rs  mod.rs
server/src/sources/: bluesky.rs  mod.rs  standardsite.rs  steam.rs
web/: knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
web/scripts/: og-template.html  render-icons.mjs  render-og.mjs
web/src/: app.css  app.html  service-worker.ts
web/src/lib/: api.test.ts  api.ts  columns.ts  contract-check.ts  types.ts
web/src/lib/components/: AuthorChip.svelte  Bento.svelte  BrickShell.svelte  ClientIcon.svelte  ClientPicker.svelte  FeedGrid.svelte  HandleForm.svelte  Icon.svelte  LandingWall.svelte  LayoutPicker.svelte  Masonry.svelte  Sensitive.svelte  SkeletonGrid.svelte  SwitchWall.svelte  VideoPlayer.svelte
web/src/lib/components/cards/: BlogCard.svelte  GlazeCard.svelte  PostCard.svelte  SkeletonCard.svelte  VideoCard.svelte
web/src/lib/state/: client.svelte.ts  feed.svelte.ts  feed.test.ts  handle.svelte.ts  layout.svelte.ts  player.svelte.ts  profile.svelte.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/api/feed/: +server.ts
web/static/: site.webmanifest
web/tests/: service-worker-smoke.test.ts
