[workspace]
resolver = "3"
members = ["crates/mortar-core", "crates/mortar-server", "crates/mortar-wasm"]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.97"

[workspace.dependencies]
mortar-core = { path = "crates/mortar-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
