[package]
name = "mortar-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
futures.workspace = true
tracing.workspace = true
governor = "0.10"
rand = "0.9"
rand_chacha = "0.9"
base64 = "0.22"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
web-time = "1"
tokio = { version = "1", features = ["sync", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.4", features = ["futures"] }
# The browser build talks to the network through the SW's own fetch, so it needs
# no HTTP stack of its own: gloo-net is a thin wrapper over fetch. reqwest on
# wasm was only ever that wrapper too, but it dragged the url crate's idna/ICU
# tables in with it; gloo-net does not.
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }

[dev-dependencies]
pretty_assertions = "1"

# the native suite drives tokio and wiremock; neither compiles for wasm32, so
# they stay off the browser test build (whose test modules are gated the same
# way, cfg(all(test, not(target_arch = "wasm32"))))
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"

# the wasm test lane: wasm-bindgen-test runs #[wasm_bindgen_test] fns in a
# headless browser (just test-wasm); web-sys constructs Response objects so the
# transport tests never touch the network
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Headers", "Response", "ResponseInit"] }
